--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,8 @@ UnityProject/Assets/TextMesh Pro/Sprites/EmojiOne.json
 UnityProject/Assets/TextMesh Pro/Sprites/EmojiOne.json.meta
 UnityProject/Assets/TextMesh Pro/Sprites/EmojiOne.png
 UnityProject/Assets/TextMesh Pro/Sprites/EmojiOne.png.meta
+UnityProject/Assets/TextMesh Pro/Examples & Extras/Scenes/Benchmark (Floating Text).unity.meta
+UnityProject/Assets/TextMesh Pro/Examples & Extras/Textures/Fruit Jelly (B&W).jpg.meta
+UnityProject/Assets/TextMesh Pro/Examples & Extras/Textures/Gradient Diagonal (Color).jpg.meta
+UnityProject/Assets/TextMesh Pro/Examples & Extras/Textures/Gradient Horizontal (Color).jpg.meta
+UnityProject/Assets/TextMesh Pro/Examples & Extras/Textures/Gradient Vertical (Color).jpg.meta
